# your_project/docs/swagger.json
@@ -2110,7 +2110,7 @@
                 }
             }
         },
-        "/{companyID}/mailinglist/{ID}": {
+        "/{companyID}/mailinglist/{mailinglistID}": {
             "get": {
                 "description": "Get one Mailinglist.",
                 "produces": [
@@ -3408,6 +3408,10 @@
             "description": "TagDetails represents detailed information about a specific tag.",
             "type": "object",
             "properties": {
+                "color": {
+                    "description": "Tag's color.",
+                    "type": "string"
+                },
                 "company_id": {
                     "description": "Tag's company",
                     "type": "string"
@@ -3430,6 +3434,10 @@
             "description": "TagIn represents the input structure for creating a new tag.",
             "type": "object",
             "properties": {
+                "color": {
+                    "description": "Tag's color.",
+                    "type": "string"
+                },
                 "name": {
                     "description": "Tag's name.",
                     "type": "string"
@@ -3465,6 +3473,10 @@
             "description": "TagTable represents a single tag entry in a table.",
             "type": "object",
             "properties": {
+                "color": {
+                    "description": "Tag's color.",
+                    "type": "string"
+                },
                 "id": {
                     "description": "Unique identifier for the tag.",
                     "type": "string"
